--- a/templates/pages/aboutUsPage.html.twig
+++ b/templates/pages/aboutUsPage.html.twig
@@ -7,10 +7,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 hText">
-                    <h1>Про Нас</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis totam vitae temporibus ipsa
-                        nihil iste perspiciatis quis modi aut velit culpa doloremque mollitia dolor facere, deleniti
-                        libero tempora maxime, consequatur quasi facilis commodi minima molestias.</p>
+                    <h1>OctoWice</h1>
+                    <p>Команда скромных специалистов. Почему так? Однозначно сейчас прорыв в ИТ индустрии и каждый хочет свой сайт сделанный отлично без проблем. Такие сайты достаточно дорогие. Мы сделали разные тарифы для вашего удобства.   </p>
                 </div>
             </div>
         </div>
@@ -26,7 +24,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 infInBeli">
                     <h2>Во что мы верим?</h2>
-                    <p>В трезвый дух и бодрый взгляд</p>
+                    <p>Наши главные парадигмы в компании</p>
                 </div>
             </div>
 
@@ -40,11 +38,11 @@
                 </div>
 
                 <div class="row textBeli">
-                    <p>Lorem ipsum dolor sit amet.</p>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                    <p>Цена - наши услуги стоят пользе которую они приносят. Всё что дорого и безрезультатно - лишнее</p>
+                    <p>Уверенность в будущем ИТ - мы несем в массы - “За ИТ будущее”. Бизнес который сейчас не освоил или не пытается освоить интернет умрет в скором времени.</p>
+                    <p>Нет проекта клиента - все проекты клиентов, которые мы ведем - наша ответственность. Есть только один выход из ситуации - сделать проект успешным.</p>
+                    <p>Человечность - города, большие компании, традиции и многое другое это результат работы людей. Мы не люди, мы должны быть человечными</p>
+                    <p>Продукт - Мы уверены в своих силах и предоставляемых услугах. Начиная от анализа конкурентов и заканчивая загрузкой готового проекта на хостинг, мы проверяем сами себя по несколько раз и предосовляем вам возможность проверить</p>
                 </div>
             </div>
         </div>
@@ -59,7 +57,7 @@
         <div class="container">
             <div class="row frR">
                 <h2>Наши Ценности!</h2>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>что мы ценим в компании?</p>
             </div>
             <div class="row">
                 <div class="col-lg-12 col-md-12 imgV">
@@ -68,73 +66,73 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 col-md-12 twBlInVal">
-                    <p>Lorem, ipsum dolor.</p>
-                    <p>Lorem, ipsum dolor.</p>
-                    <p>Lorem, ipsum dolor.</p>
+                    <p>Интеллектуальный труд и ответственность</p>
+                    <p>Человечность с клиентами</p>
+                    <p>Ориентированность на качество</p>
                 </div>
             </div>
         </div>
 
     </section>
 
-    <section class="ourWork">
+    {#<section class="ourWork">#}
 
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 infInWork">
-                    <h2>Во что мы верим?</h2>
-                    <p>В трезвый дух и бодрый взгляд</p>
-                </div>
-            </div>
+        {#<div class="container">#}
+            {#<div class="row">#}
+                {#<div class="col-lg-12 col-md-12 infInWork">#}
+                    {#<h2>Во что мы верим?</h2>#}
+                    {#<p>В трезвый дух и бодрый взгляд</p>#}
+                {#</div>#}
+            {#</div>#}
 
-            <div class="row blInW">
+            {#<div class="row blInW">#}
 
-                <div class="col-lg-4 col-md-4 blockW">
-                    <div id="infW">
-                        <img src="" alt="">
-                    </div>
-                </div>
-
-
-                <div class="col-lg-4 col-md-4 blockW">
-                    <div id="infW">
-                        <img src="" alt="">
-                    </div>
-                </div>
+                {#<div class="col-lg-4 col-md-4 blockW">#}
+                    {#<div id="infW">#}
+                        {#<img src="" alt="">#}
+                    {#</div>#}
+                {#</div>#}
 
 
-                <div class="col-lg-4 col-md-4 blockW">
-                    <div id="infW">
-                        <img src="" alt="">
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-4 blockW">
-                    <div id="infW">
-                        <img src="" alt="">
-                    </div>
-                </div>
+                {#<div class="col-lg-4 col-md-4 blockW">#}
+                    {#<div id="infW">#}
+                        {#<img src="" alt="">#}
+                    {#</div>#}
+                {#</div>#}
 
 
-                <div class="col-lg-4 col-md-4 blockW">
-                    <div id="infW">
-                        <img src="" alt="">
-                    </div>
-                </div>
+                {#<div class="col-lg-4 col-md-4 blockW">#}
+                    {#<div id="infW">#}
+                        {#<img src="" alt="">#}
+                    {#</div>#}
+                {#</div>#}
+
+                {#<div class="col-lg-4 col-md-4 blockW">#}
+                    {#<div id="infW">#}
+                        {#<img src="" alt="">#}
+                    {#</div>#}
+                {#</div>#}
 
 
-                <div class="col-lg-4 col-md-4 blockW">
-                    <div id="infW">
-                        <img src="" alt="">
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
+                {#<div class="col-lg-4 col-md-4 blockW">#}
+                    {#<div id="infW">#}
+                        {#<img src="" alt="">#}
+                    {#</div>#}
+                {#</div>#}
 
 
-    </section>
+                {#<div class="col-lg-4 col-md-4 blockW">#}
+                    {#<div id="infW">#}
+                        {#<img src="" alt="">#}
+                    {#</div>#}
+                {#</div>#}
+
+            {#</div>#}
+
+        {#</div>#}
+
+
+    {#</section>#}
 
 
     <section class="FourSec">
