--- a/templates/pages/servicesPage.html.twig
+++ b/templates/pages/servicesPage.html.twig
@@ -8,13 +8,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 navB">
-                    <h1>Ваш сайт приведет целевой трафик – стоит обратиться к нам!</h1>
-                    <p>Вы офигееите от нашего професионализма<br>где вы найдете еще такую команду?</p>
+                    <h1>Сайт-визитка </h1>
+                    <p>Поддержи имидж своей компании в интернете!</p>
                 </div>
             </div>
             <div class="row butPos">
                 <div class="col-lg-12 col-md-12 butInNav">
-                    <p>Заказать звонок </p>
+                    <p>Заказать звонок</p>
                 </div>
             </div>
         </div>
@@ -36,9 +36,8 @@
                 </div>
 
                 <div class="row desScr">
-                    <h2>Как проходит оптимизация сайта?
-                    </h2>
-                    <p>Оптимизация сайта для поисковых систем </p>
+                    <h2>Что входит в разработку Сайта визитки?</h2>
+                    <p>c нашей командой</p>
                 </div>
 
                 <div class="row fiveBlockContUs">
@@ -50,11 +49,11 @@
                 </div>
 
                 <div class="row fiveBlockInfUs">
-                    <div><p>Анализ вашего бизнеса, сайта и конкурентов</p></div>
-                    <div><p>Составление Сео-структуры сайта согласно целям бизнеса</p></div>
-                    <div><p>Внешняя и внутренняя оптимизация вашего сайта</p></div>
-                    <div><p>Установка систем веб-аналитики для сбора данных</p></div>
-                    <div><p>Увеличиваем конверсию, улучшаем качество контента сайта, анализируем показатели систем аналитики</p></div>
+                    <div><p>Личный ассистент который всегда готов вам помочь, и отдельная команда разработчиков</p></div>
+                    <div><p>Использование актуальных технологий, что даст низкое устаревание проекта</p></div>
+                    <div><p>Полная адаптивность вашего сайта-визитки</p></div>
+                    <div><p>Посадочная страница будет подготовлена к продвижению в поисковых системах</p></div>
+                    <div><p>Полное следование срокам и техническая поддержка на протяжении срока согласно вашего тарифа</p></div>
                 </div>
 
             </div>
@@ -65,37 +64,42 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 infoServ">
-                        <h1>Зачем заказывать продвижение сайта?</h1>
+                        <h1>Купить сайт визитку?</h1>
                         <br>
-                        <p>Понятие бизнеса достаточно обширное, каждый по-своему его определяет, однако можно сказать с полной уверенностью бизнес без клиентов – не бизнес. Как добиться того большого количества показов вашего сайта и переходов на сайт?
-                           <br> Seo-продвижение сайтов – продвижение в органическом поиске Google и Яндекс вашего сайта. Основная цель такого продвижение – увеличение целевого трафика на ваш сайт.</p>
-                        <p><b>За счет чего увеличивается трафик на сайт?</b></p>
+                        <p>Сайт-визитка - название так и кричит. Тип сайтов похож на вашу виртуальную карточку. А именно, это небольшой сайт которая хранит на себе концентрацию главной информации о вашем бизнесе. Визитки часто выделяются своим дизайном и общим необычным оформлением. .</p>
+                        <p><b>Сайты-визитки вмещают в себя такую информацию:</b></p>
                         <br>
-                        <p>Увеличение трафика на сайт происходит за счет повышения в рейтинге поисковика вашего сайта. В наше время, ведется жёсткая конкуренция за ТОП-10 в поисковике, практически в каждой нише. Согласно статистике 75% людей не переходят на вторую страницу поисковика, если ваш сайт находится не в десятке лучших – стоит бить тревогу.
-                            Проанализировав ваш сайт, мы сможем сделать упор на те сео-комплектующие которые отлично проработаны. Изменив худшие показатели, мы сможем поднять ваш сайт в рейтинге, что даст прилив трафика на вашу страницу.
-                            Увеличение ссылочной массы – закупка платных и бесплатных ссылок на ваш сайт. Полный контроль ссылочной массы и отчётность согласно тарифа купленной вами.
-                            Заказав seo-продвижение у нас, вы можете спокойно следить за продвижением вашей страницы. Еженедельный отчёт отправляется вам на почту по которому вы можете проследить всю нашу работу что сделано, что переделано и что осталось сделать. Такого рода интерактив помогает быть уверенным вам в Сео-продвижении вашей страницы и наших услуг в целом.
-                        </p>
-                        <br>
-                        <p><b>Зачем существует сео-продвижение?</b></p>
-                        <p>Как мы уже определили ранее, поисковое продвижение – это продвижение вашего сайта по рейтингу поисковика, с целью вывести ваш сайт в ТОП показов. Если у вас отсутствует какая-либо сео-оптимизация или сайт создан с большим количеством ошибок вам будет очень сложно продвинуть его как либо, поэтому мы контролирует все показатели вашего сайта вовремя продвижения.
-                        </p>
-                        <br>
-                        <p><b>Seo-продвижение включает в себя:</b></p>
                         <ul>
-                            <li>Аудит нашего сайта</li>
-                            <li>Аудит сайтов конкурентов</li>
-                            <li>Написание сео-текстов</li>
-                            <li>Сбор семантического ядра</li>
-                            <li>Внешняя сео-оптимизация</li>
-                            <li>Внутренняя сео-оптимизация</li>
+                            <li>Общие сведения о вашем бизнесе</li>
+                            <li>Описание услуг или продукции которую вы продаете</li>
+                            <li>Дополнительная информация для товара (фото, прайс-листы, портфолио)</li>
+                            <li>Контактные данные (адреса, ФИО ответственных, номера телефонов,  адреса электронных почт)</li>
+                            <li>Дополнительные страницы в зависимости от ваших запросов и требований бизнеса</li>
                         </ul>
+                        <p><b>Для кого нужен веб-сайт визитка?</b></p>
+                        <br>
+                        <p>Сайт-визитка лучший метод подать ваши контакты и небольшое описание то чем вы занимаетесь в интернете. Сайт будет работать круглосуточно, что дает возможность клиентам не зависеть от времени приема в вашем офисе или что-то подобном.</p>
+                        <p><b>При заказе сайта визитки у нас под ключ:</b></p>
+                        <br>
+                        <ul>
+                            <li>SEO оптимизация сайта поможет выйти сайту в топы рейтинга поисковика.</li>
+                            <li>Необычный дизайн сможет привлечь внимание вашего клиента и задержать его на сайте.</li>
+                            <li>SEO-тексты смогут повысить заинтересованность посетителей что в последующем увеличит вашу конверсию.</li>
+                            <li>Правильно написанный код - разработчики создают структуру сайта согласно правилам поисковиков, для предотвращения ошибок и предупреждений. </li>
+                            <li>Еженедельный отчет и дружелюбный персонал который всегда подскажет и поможет</li>
+                        </ul>
+
+                        <div class="row buttonServ">
+                            <div><a href="{{ path('choiceService') }}"><button>Заказать услугу</button></a></div>
+                        </div>
+
                     </div>
+
+
+
                 </div>
 
-                <div class="row buttonServ">
-                    <div><a href="{{ path('choiceService') }}"><button>Заказать услугу</button></a></div>
-                </div>
+
 
             </div>
         </section>
@@ -112,13 +116,13 @@
                 </div>
                 
                 <div class="row thereBlock">
-                    <div><p>Аудит сайта</p></div>
-                    <div><p>Анализ ссылочной массы</p></div>
-                    <div><p>Разработка семантичекого ядра</p></div>
+                    <div><p>Seo-оптимизация  вашего сайта визитки  (при покупке любого пакета скидка 20% на покупку любого тарифа внутренней сео-оптимизации</p></div>
+                    <div><p>Seo-поддержка сайта визитки (при покупке любого пакета скидка 20%  на покупку любого тарифа внешней сео-оптимизации)</p></div>
+                    <div><p>Увеличение срока тех. поддержки</p></div>
                 </div>
 
                 <div class="row buttonOuW">
-                    <div><button>Больше работ</button></div>
+                    <div><button>Узнать стоимость</button></div>
                 </div>
                 
             </div>
