--- a/templates/pages/articlePage.html.twig
+++ b/templates/pages/articlePage.html.twig
@@ -5,11 +5,18 @@
 {% block body %}
 
 
-            <h1>{{ articles.title }}</h1>
-            <p>{{ articles.CreatedAt|date('Y-m-d') }}</p>
-            <img src="/uploads/{{ articles.img }}">
-            <br>
-            <p>{{ articles.text|raw }}</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 articleOn">
+                <h1>{{ articles.title }}</h1>
+                <p>{{ articles.CreatedAt|date('Y-m-d') }}</p>
+                <img src="/uploads/{{ articles.img }}">
+                <br>
+                <p>{{ articles.text|raw }}</p>
+            </div>
+        </div>
+    </div>
+
 
 
 
