--- a/public/Blog/articleCSS/style.css
+++ b/public/Blog/articleCSS/style.css
@@ -1,3 +1,8 @@
-
+.articleOn {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 100px 0; }
 
 /*# sourceMappingURL=style.css.map */
