--- a/public/Blog/blog.scss
+++ b/public/Blog/blog.scss
@@ -152,6 +152,7 @@ body {
             text-align: center;
             background-color: lightgray;
             margin: 100px 0;
+            border-radius: 10px;
         }
     }
 
@@ -189,6 +190,7 @@ body {
     align-items: center;
     img {
         width: 80%;
+        padding: 50px 0;
     }
 }
 
@@ -215,3 +217,6 @@ body {
 }
 
 
+#clockInBlog {
+    margin-right: 3px;
+}
