--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
         {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
+            {{ encore_entry_link_tags('app') }}
             <link rel="stylesheet" href="/style/style.css">
             <link rel="stylesheet" href="/AboutUS/aboutUs.css">
             <link rel="stylesheet" href="/Services/services.css">
