--- a/templates/pages/blogPage.html.twig
+++ b/templates/pages/blogPage.html.twig
@@ -29,9 +29,9 @@
                     <div class="infOneObj">
                         <h1>{{ article.title }}</h1>
                         <p>{{ article.description|raw }}<p>
-                    </div>
+                    </div>imge
                     <div class="col-lg-12 col-md-12 infTwoObj">
-                        <p>&#9200;{{ article.CreatedAt|date('Y/m/d') }}</p>
+                        <p><i id="clockInBlog" class="far fa-clock"></i>{{ article.CreatedAt|date('Y/m/d') }}</p>
                         <p><a href="{{ path('article',{'slug':article.slug}) }}">Подробнее</a> </p>
                     </div>
                     <div class="imgInOneObj">
