--- a/templates/pages/servicesPage.html.twig
+++ b/templates/pages/servicesPage.html.twig
@@ -1,20 +1,20 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Services{% endblock %}
+{% block title %}AboutUs{% endblock %}
 {% block body %}
 
 
-    <nav class="SrvN">
+    <nav>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 navB">
-                    <h1>Сайт-визитка </h1>
-                    <p>Поддержи имидж своей компании в интернете!</p>
+                    <h1>Все наши услуги</h1>
+                    <p>Вы офигееите от нашего професионализма<br>где вы найдете еще такую команду? </p>
                 </div>
             </div>
             <div class="row butPos">
                 <div class="col-lg-12 col-md-12 butInNav">
-                    <p>Заказать звонок</p>
+                    <p>Заказать Услугу</p>
                 </div>
             </div>
         </div>
@@ -23,170 +23,95 @@
 
 
 
+
     <main>
 
-        <section class="contactUs">
+        <section class="creatS">
 
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 iconsBl">
-                        <i id="oneI" class="fas fa-phone"></i>
-                        <i id="twoI" class="far fa-comment"></i>
+                    <div class="col-lg-12 col-md-12 creatInf">
+                        <h1>Создание сайтов,какой сайт вам нужен?</h1>
+                        <p>тут описание услуг которые будем предоставлять</p>
                     </div>
                 </div>
 
-                <div class="row desScr">
-                    <h2>Что входит в разработку Сайта визитки?</h2>
-                    <p>c нашей командой</p>
+                <div class="row firstB">
+                    <div class="col-lg-2 col-md-2 creatF"><p>Лендинг Страница <i class="fas fa-arrow-right"></i></p></div>
+                    <div class="col-lg-2 col-md-2 creatF"><p>Интернет магазин <i class="fas fa-arrow-right"></i></p></div>
+                    <div class="col-lg-2 col-md-2 creatF"><p>Информационный сайт <i class="fas fa-arrow-right"></i></p></div>
+                    <div class="col-lg-2 col-md-2 creatF"><p>Сайт каталог <i class="fas fa-arrow-right"></i></p></div>
                 </div>
 
-                <div class="row fiveBlockContUs">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                <div class="row oneB">
+                    <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
+                    <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
+                    <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
+                    <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
                 </div>
 
-                <div class="row fiveBlockInfUs">
-                    <div><p>Личный ассистент который всегда готов вам помочь, и отдельная команда разработчиков</p></div>
-                    <div><p>Использование актуальных технологий, что даст низкое устаревание проекта</p></div>
-                    <div><p>Полная адаптивность вашего сайта-визитки</p></div>
-                    <div><p>Посадочная страница будет подготовлена к продвижению в поисковых системах</p></div>
-                    <div><p>Полное следование срокам и техническая поддержка на протяжении срока согласно вашего тарифа</p></div>
+                <div class="row twoS">
+                    <div class="col-lg-12 col-md-12 twoB">
+                        <p>Не могу разобраться, заказать звонок</p>
+                    </div>
                 </div>
 
             </div>
 
         </section>
 
-        <section class="descOfServ">
+
+
+        <section class="seoW">
+
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 infoServ">
-                        <h1>Купить сайт визитку?</h1>
-                        <br>
-                        <p>Сайт-визитка - название так и кричит. Тип сайтов похож на вашу виртуальную карточку. А именно, это небольшой сайт которая хранит на себе концентрацию главной информации о вашем бизнесе. Визитки часто выделяются своим дизайном и общим необычным оформлением. .</p>
-                        <p><b>Сайты-визитки вмещают в себя такую информацию:</b></p>
-                        <br>
-                        <ul>
-                            <li>Общие сведения о вашем бизнесе</li>
-                            <li>Описание услуг или продукции которую вы продаете</li>
-                            <li>Дополнительная информация для товара (фото, прайс-листы, портфолио)</li>
-                            <li>Контактные данные (адреса, ФИО ответственных, номера телефонов,  адреса электронных почт)</li>
-                            <li>Дополнительные страницы в зависимости от ваших запросов и требований бизнеса</li>
-                        </ul>
-                        <p><b>Для кого нужен веб-сайт визитка?</b></p>
-                        <br>
-                        <p>Сайт-визитка лучший метод подать ваши контакты и небольшое описание то чем вы занимаетесь в интернете. Сайт будет работать круглосуточно, что дает возможность клиентам не зависеть от времени приема в вашем офисе или что-то подобном.</p>
-                        <p><b>При заказе сайта визитки у нас под ключ:</b></p>
-                        <br>
-                        <ul>
-                            <li>SEO оптимизация сайта поможет выйти сайту в топы рейтинга поисковика.</li>
-                            <li>Необычный дизайн сможет привлечь внимание вашего клиента и задержать его на сайте.</li>
-                            <li>SEO-тексты смогут повысить заинтересованность посетителей что в последующем увеличит вашу конверсию.</li>
-                            <li>Правильно написанный код - разработчики создают структуру сайта согласно правилам поисковиков, для предотвращения ошибок и предупреждений. </li>
-                            <li>Еженедельный отчет и дружелюбный персонал который всегда подскажет и поможет</li>
-                        </ul>
-
-                        <div class="row buttonServ">
-                            <div><a href="{{ path('choiceService') }}"><button>Заказать услугу</button></a></div>
-                        </div>
-
-                    </div>
-
-
-
-                </div>
-
-
-
-            </div>
-        </section>
-
-        <section class="ouWork">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 col-md-12 workEx">
-                        <div>
-                            <h1>Дополнительные услуги</h1>
-                            <p>Отдельно заказываемые услуги  </p>
-                        </div>
+                    <div class="col-lg-12 col-md-12 seoInf">
+                        <h1>Давайте попробуем комплексное Seo - продвижение</h1>
+                        <p>тут описание услуг которые будем предоставлять</p>
                     </div>
                 </div>
-                
-                <div class="row thereBlock">
-                    <div><p>Seo-оптимизация  вашего сайта визитки  (при покупке любого пакета скидка 20% на покупку любого тарифа внутренней сео-оптимизации</p></div>
-                    <div><p>Seo-поддержка сайта визитки (при покупке любого пакета скидка 20%  на покупку любого тарифа внешней сео-оптимизации)</p></div>
-                    <div><p>Увеличение срока тех. поддержки</p></div>
+
+                <div class="row firstB">
+                    <div class="col-lg-2 col-md-2 creatF"><p>Лендинг Страница <i class="fas fa-arrow-right"></i></p></div>
+                    <div class="col-lg-2 col-md-2 creatF"><p>Интернет магазин <i class="fas fa-arrow-right"></i></p></div>
                 </div>
 
-                <div class="row buttonOuW">
-                    <div><button>Узнать стоимость</button></div>
+                <div class="row oneB">
+                    <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
+                    <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
                 </div>
-                
+
             </div>
 
         </section>
 
-        <section class="costServ">
+
+
+        <section class="designW">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 pricSch">
-                        <div>
-                            <h1>Три варианта продвижения вашего сайта </h1>
-                            <p>три основных типа продвижения, точная сумма оговаривается лично </p>
-                        </div>
+                    <div class="col-lg-12 col-md-12 desB">
+                        <h1>Дизайн наше все</h1>
+                        <p>
+                            Мы сделаем сайт красиво и смачно
+                        </p>
+                        <a href="#"><button>Узнайте больше <i class="fas fa-arrow-right"></i></button></a>
                     </div>
                 </div>
-                
-                <div class="row thereMainBlocks">
-                    <div id="radius"><p>Пакет Start:</p>
-                        <ul>
-                            <li>Функции определено в описании макета</li>
-                            <li>Корзина</li>
-                            <li>Шаблонный дизайн</li>
-                            <li>Ограниченный функционал Админ панели</li>
-                            <li>Сроки от 7  дней</li>
-                        </ul>
-                        <h1>Цена: от 6.000 грн</h1>
-                    </div>
-                    <div id="newCol">
-                        <p>Пакет High:</p>
-                        <ul>
-                            <li>Функционал обсуждается лично</li>
-                            <li>От 15 страниц</li>
-                            <li>Корзина</li>
-                            <li>Индивидуальный дизайн</li>
-                            <li>Полноценная админ панель – корзина</li>
-                            <li>Сроки от 1 – 2  месяца</li>
-                        </ul>
-                        <h1>Цена: от 20.000 грн</h1>
-                    </div>
-                    <div id="radiusTwo"><p>Пакет Medium:</p>
-                        <ul>
-                            <li>Функционал обсуждается лично</li>
-                            <li>До 15 страниц</li>
-                            <li>Корзина</li>
-                            <li>Индивидуальный дизайн</li>
-                            <li>Полноценная админ панель</li>
-                            <li>Сроки от 1-2 мес</li>
-                        </ul>
-                        <h1>Цена: от 15.000 грн</h1>
-                    </div>
-                </div>
-
+                {{ render_esi(url(
+                    'contacts'
+                )) }}
             </div>
+
         </section>
+
+
 
     </main>
 
-    <div class="container">
-        {{ render_esi(url(
-            'contacts'
-        )) }}
-    </div>
+
+
+
 
 {% endblock %}
-
-
