--- a/templates/pages/servicesPage.html.twig
+++ b/templates/pages/servicesPage.html.twig
@@ -96,7 +96,7 @@
                         <p>
                             Мы сделаем сайт красиво и смачно
                         </p>
-                        <a href="#"><button>Узнайте больше <i class="fas fa-arrow-right"></i></button></a>
+                        <a href="{{ path('choiceService') }}"><button>Узнайте больше <i class="fas fa-arrow-right"></i></button></a>
                     </div>
                 </div>
                 {{ render_esi(url(
