--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -181,7 +181,7 @@ body {
  .Serv {
     color: white;
     border: 5px solid white;
-    padding: 10px 100px;
+    padding: 7px 80px;
     margin-top: 50px;
 
    a {
@@ -444,12 +444,15 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 250px;
+    //margin-left: 250px;
   }
 
 }
 
 .buttonBlock {
+  display: flex;
+  align-items: center;
+  justify-content: center;
     div {
         display: flex;
         align-items: center;
@@ -478,7 +481,7 @@ body {
     font-size: 23px;
     color: white;
     background-color: red;
-    padding: 10px !important;
+    padding: 17px !important;
     margin-left: 20px !important;
 
 }
@@ -498,7 +501,7 @@ body {
     justify-content: center;
     margin-top: 150px;
     button {
-        padding: 10px 20px;
+        padding: 15px 35px;
         border: none;
         background-color: white;
         cursor: pointer;
