--- a/templates/pages/servicesPage.html.twig
+++ b/templates/pages/servicesPage.html.twig
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 navB">
                     <h1>Все наши услуги</h1>
-                    <p>Вы офигееите от нашего професионализма<br>где вы найдете еще такую команду? </p>
+                    <p>что нужно для вашего бизнеса?</p>
                 </div>
             </div>
             <div class="row butPos">
@@ -31,23 +31,23 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 creatInf">
-                        <h1>Создание сайтов,какой сайт вам нужен?</h1>
-                        <p>тут описание услуг которые будем предоставлять</p>
+                        <h1>Создание сайтов</h1>
+                        <p>типы сайтов, какой именно нужен Вам?</p>
                     </div>
                 </div>
 
                 <div class="row firstB">
                     <div class="col-lg-2 col-md-2 creatF"><p>Лендинг Страница <i class="fas fa-arrow-right"></i></p></div>
-                    <div class="col-lg-2 col-md-2 creatF"><p>Интернет магазин <i class="fas fa-arrow-right"></i></p></div>
-                    <div class="col-lg-2 col-md-2 creatF"><p>Информационный сайт <i class="fas fa-arrow-right"></i></p></div>
+                    <div class="col-lg-2 col-md-2 creatF"><p>Сайт визитка <i class="fas fa-arrow-right"></i></p></div>
                     <div class="col-lg-2 col-md-2 creatF"><p>Сайт каталог <i class="fas fa-arrow-right"></i></p></div>
+                    <div class="col-lg-2 col-md-2 creatF"><p>Интернет магазин <i class="fas fa-arrow-right"></i></p></div>
                 </div>
 
                 <div class="row oneB">
-                    <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
-                    <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
-                    <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
-                    <div class="col-lg-2 col-md-2"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, sunt.</p></div>
+                    <div class="col-lg-2 col-md-2"><p>Одностраничный сайт созданный для продажи товара/услуги</p></div>
+                    <div class="col-lg-2 col-md-2"><p>Цель этих страниц предоставление информации о вашем товаре и услуги, бренда</p></div>
+                    <div class="col-lg-2 col-md-2"><p>Содержит большое количество товаров или услуг без корзины, однако с админ панелью</p></div>
+                    <div class="col-lg-2 col-md-2"><p>нацелен для продажи товара или услуги. Удобный функционал как для клиента как и для вас и ваших работников.</p></div>
                 </div>
 
                 <div class="row twoS">
@@ -67,8 +67,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 seoInf">
-                        <h1>Давайте попробуем комплексное Seo - продвижение</h1>
-                        <p>тут описание услуг которые будем предоставлять</p>
+                        <h1>Давайте подберем комплексное Seo-продвижение</h1>
+                        <p>Чем вы занимаетесь в вашем деле?</p>
                     </div>
                 </div>
 
@@ -92,9 +92,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 desB">
-                        <h1>Дизайн наше все</h1>
+                        <h1>Дизайн для Вас</h1>
                         <p>
-                            Мы сделаем сайт красиво и смачно
+                            Давайте создадим удобный и красивый интерфейс для вашего проекта
                         </p>
                         <a href="{{ path('choiceService') }}"><button>Узнайте больше <i class="fas fa-arrow-right"></i></button></a>
                     </div>
