--- a/public/Services/services.scss
+++ b/public/Services/services.scss
@@ -147,7 +147,7 @@ nav {
 .butInNav {
 
     color: white;
-    background-color: #363636;
+    background-color: white;
     text-align: center;
     align-items: center;
     margin: 100px 100px;
@@ -158,7 +158,7 @@ nav {
      p {
          padding: 13px 20px;
          margin: 0;
-         color: white !important;
+         color: black !important;
 
      }
 }
