--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -2075,3 +2075,9 @@
     }
 
 }
+
+@media only screen and (min-width: 1920px) and (max-width: 10000px) {
+    .adptiveMenu {
+        display: none;
+    }
+}
