--- a/public/mediaOcto/media.css
+++ b/public/mediaOcto/media.css
@@ -429,6 +429,30 @@
         height: auto;
     }
 
+    .twoS {
+        padding: 0 !important;
+    }
+
+    .creatInf h1 {
+        text-align: center;
+    }
+
+    .creatS {
+        height: auto !important;
+    }
+
+    .seoW {
+        height: auto !important;
+    }
+
+    .twoS {
+        display: none !important;
+    }
+
+    .seoInf h1 {
+        text-align: center;
+    }
+
 }
 
 
@@ -809,6 +833,30 @@
     #newCol {
         position: relative;
         top: 1px;
+    }
+
+    .twoS {
+        padding: 0 !important;
+    }
+
+    .creatInf h1 {
+        text-align: center;
+    }
+
+    .creatS {
+        height: auto !important;
+    }
+
+    .seoW {
+        height: auto !important;
+    }
+
+    .twoS {
+        display: none !important;
+    }
+
+    .seoInf h1 {
+        text-align: center;
     }
 
 }
@@ -1196,6 +1244,30 @@
     .ourValu {
         padding: 100px 0;
         height: auto;
+    }
+
+    .twoS {
+        padding: 0 !important;
+    }
+
+    .creatInf h1 {
+        text-align: center;
+    }
+
+    .creatS {
+        height: auto !important;
+    }
+
+    .seoW {
+        height: auto !important;
+    }
+
+    .twoS {
+        display: none !important;
+    }
+
+    .seoInf h1 {
+        text-align: center;
     }
 
 }
@@ -1590,6 +1662,31 @@
         font-size: 20px !important;
         text-align: center !important;
     }
+
+    .twoS {
+        padding: 0 !important;
+    }
+
+    .creatInf h1 {
+        text-align: center;
+    }
+
+    .creatS {
+        height: auto !important;
+    }
+
+    .seoW {
+        height: auto !important;
+    }
+
+    .twoS {
+        display: none !important;
+    }
+
+    .seoInf h1 {
+        text-align: center;
+    }
+
 }
 
 
@@ -1975,6 +2072,30 @@
         font-size: 20px !important;
         text-align: center !important;
     }
+
+    .twoS {
+        padding: 0 !important;
+    }
+
+    .creatInf h1 {
+        text-align: center;
+    }
+
+    .creatS {
+        height: auto !important;
+    }
+
+    .seoW {
+        height: auto !important;
+    }
+
+    .twoS {
+        display: none !important;
+    }
+
+    .seoInf h1 {
+        text-align: center;
+    }
 }
 
 @media only screen and (max-width: 1440px) and (max-width: 1920px)  {
@@ -2031,7 +2152,6 @@
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1920px)  {
-
 
 
     .adptiveMenu {
