--- a/templates/pages/newBusinesSite.html.twig
+++ b/templates/pages/newBusinesSite.html.twig
@@ -90,7 +90,7 @@
                         </ul>
 
                         <div class="row buttonServ">
-                            <div><a href="{{ path('choiceService') }}"><button>Заказать услугу</button></a></div>
+                            <div><a href="#"><button>Заказать услугу</button></a></div>
                         </div>
 
                     </div>
