--- a/templates/pages/servicesPage.html.twig
+++ b/templates/pages/servicesPage.html.twig
@@ -38,7 +38,7 @@
 
                 <div class="row firstB">
                     <div class="col-lg-2 col-md-2 creatF"><a href="{{ path('landingPage') }}"><p>Лендинг Страница <i class="fas fa-arrow-right"></i></p></a></div>
-                    <div class="col-lg-2 col-md-2 creatF"><a href="{{ path('choiceService') }}"><p>Сайт визитка <i class="fas fa-arrow-right"></i></p></a></div>
+                    <div class="col-lg-2 col-md-2 creatF"><a href="{{ path('cardSite') }}"><p>Сайт визитка <i class="fas fa-arrow-right"></i></p></a></div>
                     <div class="col-lg-2 col-md-2 creatF"><a href="{{ path('siteDirectory') }}"><p>Сайт каталог <i class="fas fa-arrow-right"></i></p></a></div>
                     <div class="col-lg-2 col-md-2 creatF"><a href="{{ path('business') }}"><p>Интернет магазин <i class="fas fa-arrow-right"></i></p></a></div>
                 </div>
