--- a/templates/pages/newLandingPage.html.twig
+++ b/templates/pages/newLandingPage.html.twig
@@ -90,12 +90,10 @@
                         </ul>
 
                         <div class="row buttonServ">
-                            <div><a href="{{ path('choiceService') }}"><button>Заказать услугу</button></a></div>
+                            <div><a href="#"><button>Заказать услугу</button></a></div>
                         </div>
 
                     </div>
-
-
 
                 </div>
 
